--- a/index.html
+++ b/index.html
@@ -58,8 +58,70 @@
       </div>
       <img class="aboutUs__img" src="./src/img/saly.png" alt="">
     </section>
-    <section class="ourService">
 
+    <section class="our-service">
+      <div>
+        <h1>Our Service</h1>
+        <p>We turn information into actionable insights We work to understand your issues <br> and are driven to ask better questions in the pursuit of making work.</p>
+      </div>
+      <div class="product-block" class="top_row">
+        <div>
+          <img class="items" src="src/img/product_item_1.svg" alt="">
+          <h3>Order Management</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis congue nisl hendrerit commodo.</p>
+          <span>
+            <a href="#">Learn more</a>
+            <img src="src/img/vector.svg" alt="">
+          </span>
+        </div>
+        <div>
+          <img class="items" src="src/img/product_item_2.svg" alt="">
+          <h3>Social Assistant</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis congue nisl hendrerit commodo.</p>
+          <span>
+            <a href="#">Learn more</a>
+            <img src="src/img/vector.svg" alt="">
+          </span>
+        </div>
+        <div>
+          <img class="items" src="src/img/product_item_3.svg" alt="">
+          <h3>Crypto Platform </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis congue nisl hendrerit commodo.</p>
+          <span>
+            <a href="#">Learn more</a>
+            <img src="src/img/vector.svg" alt="">
+          </span>
+        </div>
+      </div>
+      <div class="product-block" class="bottom_row">
+        <div>
+          <img class="items" src="src/img/product_item_4.svg" alt="">
+          <h3>Smart Trading Models</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis congue nisl hendrerit commodo.</p>
+          <span>
+            <a href="#">Learn more</a>
+            <img src="src/img/vector.svg" alt="">
+          </span>
+        </div>
+        <div>
+          <img class="items" src="src/img/product_item_5.svg" alt="">
+          <h3>Analyzer of the News</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis congue nisl hendrerit commodo.</p>
+          <span>
+            <a href="#">Learn more</a>
+            <img src="src/img/vector.svg" alt="">
+          </span>
+        </div>
+        <div>
+          <img class="items" src="src/img/product_item_6.svg" alt="">
+          <h3>Module of Price Notification</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis congue nisl hendrerit commodo.</p>
+          <span>
+            <a href="#">Learn more</a>
+            <img src="src/img/vector.svg" alt="">
+          </span>
+        </div>
+      </div>
     </section>
     <section>
       
