--- a/index.html
+++ b/index.html
@@ -123,9 +123,25 @@
         </div>
       </div>
     </section>
-    <section>
-      
-    </section>
+    <section class="product_desc">
+      <div class="top_desc">
+        <img src="src/img/man-working-using-virtual-reality-1.svg" alt="">
+      <span>
+        <h1>We complete every projects extra care as customer need</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at dictum risus, non suscipit arcu. Quisque aliquam posuere tortor, sit amet convallis nuncoe scelerisque in. orem ipsum  dolor sit amet, consectetur adipisicing elit. Labore eius molestiae facere, natus reprehenderit eaque eum, autem ipsam. Magfini, error. Tempora odit laborum iure inventore possimus laboriosam qui nam. </p>
+        <button>Read more</button>
+      </span>
+      </div>
+      <div class="bottom_desc">
+            
+      <span>
+        <h1>We complete every projects extra care as customer need</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at dictum risus, non suscipit arcu. Quisque aliquam posuere tortor, sit amet convallis nuncoe scelerisque in. orem ipsum  dolor sit amet, consectetur adipisicing elit. Labore eius molestiae facere, natus reprehenderit eaque eum, autem ipsam. Magfini, error. Tempora odit laborum iure inventore possimus laboriosam qui nam. </p>
+        <button>Read more</button>
+      </span>
+      <img src="src/img/man-working-using-virtual-reality-2.svg" alt="">
+      </div>
+      </section>
   </main>
   <footer>
 
