--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         </div>
       </div>
     </section>
+
     <section class="product_desc">
       <div class="top_desc">
         <img src="src/img/man-working-using-virtual-reality-1.svg" alt="">
@@ -132,8 +133,7 @@
         <button>Read more</button>
       </span>
       </div>
-      <div class="bottom_desc">
-            
+      <div class="bottom_desc">  
       <span>
         <h1>We complete every projects extra care as customer need</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at dictum risus, non suscipit arcu. Quisque aliquam posuere tortor, sit amet convallis nuncoe scelerisque in. orem ipsum  dolor sit amet, consectetur adipisicing elit. Labore eius molestiae facere, natus reprehenderit eaque eum, autem ipsam. Magfini, error. Tempora odit laborum iure inventore possimus laboriosam qui nam. </p>
@@ -142,6 +142,40 @@
       <img src="src/img/man-working-using-virtual-reality-2.svg" alt="">
       </div>
       </section>
+
+      <section class="team_staff">
+       <span class="team_text">
+        <h1>Met Our Team</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis <br> accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
+       </span>
+        <div class="team_container">
+          <div>
+            <img class="mt32" src="src/img/sunny.svg" alt="">
+            <h3>Sunny Khan</h3>
+            <p>EXECUTIVE OFFICER</p>
+            <img class="mb35" src="src/img/soc_media_items.svg" alt="">
+          </div>
+          <div>
+            <img class="mt32" src="src/img/alina.svg" alt="">
+            <h3>Alina Jesia</h3>
+            <p>UX/UI DESIGNER</p>
+            <img class="mb35" src="src/img/soc_media_items.svg" alt="">
+          </div>
+          <div>
+            <img class="mt32" src="src/img/alex.svg" alt="">
+            <h3>Alex Sohag</h3>
+            <p>BUSINESS DEVELOPMENT</p>
+            <img class="mb35" src="src/img/soc_media_items.svg" alt="">
+          </div>
+          <div>
+            <img class="mt32" src="src/img/afroza.svg" alt="">
+            <h3>Afroza Mou</h3>
+            <p>Head of marketing</p>
+            <img class="mb35" src="src/img/soc_media_items.svg" alt="">
+          </div>
+        </div>  
+      </section>
+
   </main>
   <footer>
 
