--- a/index.html
+++ b/index.html
@@ -153,29 +153,38 @@
             <img class="mt32" src="src/img/sunny.svg" alt="">
             <h3>Sunny Khan</h3>
             <p>EXECUTIVE OFFICER</p>
-            <img class="mb35" src="src/img/soc_media_items.svg" alt="">
-          </div>
-          <div>
-            <img class="mt32" src="src/img/alina.svg" alt="">
-            <h3>Alina Jesia</h3>
-            <p>UX/UI DESIGNER</p>
-            <img class="mb35" src="src/img/soc_media_items.svg" alt="">
-          </div>
-          <div>
-            <img class="mt32" src="src/img/alex.svg" alt="">
-            <h3>Alex Sohag</h3>
-            <p>BUSINESS DEVELOPMENT</p>
-            <img class="mb35" src="src/img/soc_media_items.svg" alt="">
-          </div>
-          <div>
-            <img class="mt32" src="src/img/afroza.svg" alt="">
-            <h3>Afroza Mou</h3>
-            <p>Head of marketing</p>
-            <img class="mb35" src="src/img/soc_media_items.svg" alt="">
-          </div>
-        </div>  
-      </section>
+              <img class="mb35" src="src/img/soc_media_items.svg" alt="">
+            </div>
+            <div>
+              <img class="mt32" src="src/img/alina.svg" alt="">
+              <h3>Alina Jesia</h3>
+              <p>UX/UI DESIGNER</p>
+              <img class="mb35" src="src/img/soc_media_items.svg" alt="">
+            </div>
+            <div>
+              <img class="mt32" src="src/img/alex.svg" alt="">
+              <h3>Alex Sohag</h3>
+              <p>BUSINESS DEVELOPMENT</p>
+              <img class="mb35" src="src/img/soc_media_items.svg" alt="">
+            </div>
+            <div>
+              <img class="mt32" src="src/img/afroza.svg" alt="">
+              <h3>Afroza Mou</h3>
+              <p>Head of marketing</p>
+              <img class="mb35" src="src/img/soc_media_items.svg" alt="">
+            </div>
+          </div>  
+        </section>
 
+        <section class="newspaper">
+         <div>
+          <span>
+            <h1>Subscribe to get the Latest News</h1>
+          <p>We recommended you to subscribe to our newspaper,drop your email below to get daily update about us</p>
+        </span>
+        <input type="email" placeholder="Enter your email addres">
+         </div>
+      </section>
   </main>
   <footer>
 
