--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +14,7 @@
   <link rel="stylesheet" href="./src/css/style.css">
   <title>Zone.</title>
 </head>
+
 <body>
   <header class="header">
     <div class="container">
@@ -44,14 +46,17 @@
           Virtual Reality <br> Business Solutions
         </h2>
         <p class="aboutUs__desc">
-          We have over 15 year exprience in business consultting arena. We have over 15 year exprience in business consultting arena and artficial intelligence.
+          We have over 15 year exprience in business consultting arena. We have over 15 year exprience in business
+          consultting arena and artficial intelligence.
         </p>
         <div class="aboutUs__links">
           <button class="aboutUs__btn btn">Join Us</button>
           <a class="aboutUs__watch">
             <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M15 0C23.2845 0 30 6.7155 30 15C30 23.2845 23.2845 30 15 30C6.7155 30 0 23.2845 0 15C0 6.7155 6.7155 0 15 0ZM15 3C11.8174 3 8.76515 4.26428 6.51472 6.51472C4.26428 8.76515 3 11.8174 3 15C3 18.1826 4.26428 21.2348 6.51472 23.4853C8.76515 25.7357 11.8174 27 15 27C18.1826 27 21.2348 25.7357 23.4853 23.4853C25.7357 21.2348 27 18.1826 27 15C27 11.8174 25.7357 8.76515 23.4853 6.51472C21.2348 4.26428 18.1826 3 15 3ZM12.756 7.704L21.756 13.704C21.9681 13.8275 22.1467 14.0012 22.276 14.2099C22.4053 14.4185 22.4815 14.6557 22.4978 14.9007C22.5141 15.1456 22.47 15.3908 22.3694 15.6147C22.2689 15.8386 22.1149 16.0345 21.921 16.185L12.756 22.296C12.528 22.429 12.269 22.4995 12.0051 22.5004C11.7412 22.5013 11.4817 22.4326 11.2528 22.3011C11.024 22.1696 10.8338 21.9801 10.7017 21.7517C10.5695 21.5232 10.4999 21.2639 10.5 21V9C10.4999 8.73607 10.5695 8.47679 10.7017 8.24834C10.8338 8.01989 11.024 7.83037 11.2528 7.6989C11.4817 7.56743 11.7412 7.49867 12.0051 7.49956C12.269 7.50046 12.528 7.57098 12.756 7.704Z" fill="white"/>
-            </svg>              
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M15 0C23.2845 0 30 6.7155 30 15C30 23.2845 23.2845 30 15 30C6.7155 30 0 23.2845 0 15C0 6.7155 6.7155 0 15 0ZM15 3C11.8174 3 8.76515 4.26428 6.51472 6.51472C4.26428 8.76515 3 11.8174 3 15C3 18.1826 4.26428 21.2348 6.51472 23.4853C8.76515 25.7357 11.8174 27 15 27C18.1826 27 21.2348 25.7357 23.4853 23.4853C25.7357 21.2348 27 18.1826 27 15C27 11.8174 25.7357 8.76515 23.4853 6.51472C21.2348 4.26428 18.1826 3 15 3ZM12.756 7.704L21.756 13.704C21.9681 13.8275 22.1467 14.0012 22.276 14.2099C22.4053 14.4185 22.4815 14.6557 22.4978 14.9007C22.5141 15.1456 22.47 15.3908 22.3694 15.6147C22.2689 15.8386 22.1149 16.0345 21.921 16.185L12.756 22.296C12.528 22.429 12.269 22.4995 12.0051 22.5004C11.7412 22.5013 11.4817 22.4326 11.2528 22.3011C11.024 22.1696 10.8338 21.9801 10.7017 21.7517C10.5695 21.5232 10.4999 21.2639 10.5 21V9C10.4999 8.73607 10.5695 8.47679 10.7017 8.24834C10.8338 8.01989 11.024 7.83037 11.2528 7.6989C11.4817 7.56743 11.7412 7.49867 12.0051 7.49956C12.269 7.50046 12.528 7.57098 12.756 7.704Z"
+                fill="white" />
+            </svg>
             <p>Watch video</p>
           </a>
         </div>
@@ -62,13 +67,15 @@
     <section class="our-service">
       <div>
         <h1>Our Service</h1>
-        <p>We turn information into actionable insights We work to understand your issues <br> and are driven to ask better questions in the pursuit of making work.</p>
+        <p>We turn information into actionable insights We work to understand your issues <br> and are driven to ask
+          better questions in the pursuit of making work.</p>
       </div>
       <div class="product-block" class="top_row">
         <div>
           <img class="items" src="src/img/product_item_1.svg" alt="">
           <h3>Order Management</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis congue nisl hendrerit commodo.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis
+            congue nisl hendrerit commodo.</p>
           <span>
             <a href="#">Learn more</a>
             <img src="src/img/vector.svg" alt="">
@@ -77,7 +84,8 @@
         <div>
           <img class="items" src="src/img/product_item_2.svg" alt="">
           <h3>Social Assistant</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis congue nisl hendrerit commodo.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis
+            congue nisl hendrerit commodo.</p>
           <span>
             <a href="#">Learn more</a>
             <img src="src/img/vector.svg" alt="">
@@ -86,7 +94,8 @@
         <div>
           <img class="items" src="src/img/product_item_3.svg" alt="">
           <h3>Crypto Platform </h3>
-          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis congue nisl hendrerit commodo.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis
+            congue nisl hendrerit commodo.</p>
           <span>
             <a href="#">Learn more</a>
             <img src="src/img/vector.svg" alt="">
@@ -97,7 +106,8 @@
         <div>
           <img class="items" src="src/img/product_item_4.svg" alt="">
           <h3>Smart Trading Models</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis congue nisl hendrerit commodo.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis
+            congue nisl hendrerit commodo.</p>
           <span>
             <a href="#">Learn more</a>
             <img src="src/img/vector.svg" alt="">
@@ -106,7 +116,8 @@
         <div>
           <img class="items" src="src/img/product_item_5.svg" alt="">
           <h3>Analyzer of the News</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis congue nisl hendrerit commodo.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis
+            congue nisl hendrerit commodo.</p>
           <span>
             <a href="#">Learn more</a>
             <img src="src/img/vector.svg" alt="">
@@ -115,7 +126,8 @@
         <div>
           <img class="items" src="src/img/product_item_6.svg" alt="">
           <h3>Module of Price Notification</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis congue nisl hendrerit commodo.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur <br> the adipiscing elit. Sed quis accumsan nisi <br> Ut ut felis
+            congue nisl hendrerit commodo.</p>
           <span>
             <a href="#">Learn more</a>
             <img src="src/img/vector.svg" alt="">
@@ -127,67 +139,133 @@
     <section class="product_desc">
       <div class="top_desc">
         <img src="src/img/man-working-using-virtual-reality-1.svg" alt="">
-      <span>
-        <h1>We complete every projects extra care as customer need</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at dictum risus, non suscipit arcu. Quisque aliquam posuere tortor, sit amet convallis nuncoe scelerisque in. orem ipsum  dolor sit amet, consectetur adipisicing elit. Labore eius molestiae facere, natus reprehenderit eaque eum, autem ipsam. Magfini, error. Tempora odit laborum iure inventore possimus laboriosam qui nam. </p>
-        <button>Read more</button>
-      </span>
+        <span>
+          <h1>We complete every projects extra care as customer need</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at dictum risus, non suscipit arcu. Quisque
+            aliquam posuere tortor, sit amet convallis nuncoe scelerisque in. orem ipsum dolor sit amet, consectetur
+            adipisicing elit. Labore eius molestiae facere, natus reprehenderit eaque eum, autem ipsam. Magfini, error.
+            Tempora odit laborum iure inventore possimus laboriosam qui nam. </p>
+          <button>Read more</button>
+        </span>
       </div>
-      <div class="bottom_desc">  
-      <span>
-        <h1>We complete every projects extra care as customer need</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at dictum risus, non suscipit arcu. Quisque aliquam posuere tortor, sit amet convallis nuncoe scelerisque in. orem ipsum  dolor sit amet, consectetur adipisicing elit. Labore eius molestiae facere, natus reprehenderit eaque eum, autem ipsam. Magfini, error. Tempora odit laborum iure inventore possimus laboriosam qui nam. </p>
-        <button>Read more</button>
-      </span>
-      <img src="src/img/man-working-using-virtual-reality-2.svg" alt="">
+      <div class="bottom_desc">
+        <span>
+          <h1>We complete every projects extra care as customer need</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at dictum risus, non suscipit arcu. Quisque
+            aliquam posuere tortor, sit amet convallis nuncoe scelerisque in. orem ipsum dolor sit amet, consectetur
+            adipisicing elit. Labore eius molestiae facere, natus reprehenderit eaque eum, autem ipsam. Magfini, error.
+            Tempora odit laborum iure inventore possimus laboriosam qui nam. </p>
+          <button>Read more</button>
+        </span>
+        <img src="src/img/man-working-using-virtual-reality-2.svg" alt="">
       </div>
-      </section>
+    </section>
 
-      <section class="team_staff">
-       <span class="team_text">
+    <section class="team_staff">
+      <span class="team_text">
         <h1>Met Our Team</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis <br> accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
-       </span>
-        <div class="team_container">
-          <div>
-            <img class="mt32" src="src/img/sunny.svg" alt="">
-            <h3>Sunny Khan</h3>
-            <p>EXECUTIVE OFFICER</p>
-              <img class="mb35" src="src/img/soc_media_items.svg" alt="">
-            </div>
-            <div>
-              <img class="mt32" src="src/img/alina.svg" alt="">
-              <h3>Alina Jesia</h3>
-              <p>UX/UI DESIGNER</p>
-              <img class="mb35" src="src/img/soc_media_items.svg" alt="">
-            </div>
-            <div>
-              <img class="mt32" src="src/img/alex.svg" alt="">
-              <h3>Alex Sohag</h3>
-              <p>BUSINESS DEVELOPMENT</p>
-              <img class="mb35" src="src/img/soc_media_items.svg" alt="">
-            </div>
-            <div>
-              <img class="mt32" src="src/img/afroza.svg" alt="">
-              <h3>Afroza Mou</h3>
-              <p>Head of marketing</p>
-              <img class="mb35" src="src/img/soc_media_items.svg" alt="">
-            </div>
-          </div>  
-        </section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis <br> accumsan nisi Ut ut felis congue nisl
+          hendrerit commodo.</p>
+      </span>
+      <div class="team_container">
+        <div>
+          <img class="mt32" src="src/img/sunny.svg" alt="">
+          <h3>Sunny Khan</h3>
+          <p>EXECUTIVE OFFICER</p>
+          <img class="mb35" src="src/img/soc_media_items.svg" alt="">
+        </div>
+        <div>
+          <img class="mt32" src="src/img/alina.svg" alt="">
+          <h3>Alina Jesia</h3>
+          <p>UX/UI DESIGNER</p>
+          <img class="mb35" src="src/img/soc_media_items.svg" alt="">
+        </div>
+        <div>
+          <img class="mt32" src="src/img/alex.svg" alt="">
+          <h3>Alex Sohag</h3>
+          <p>BUSINESS DEVELOPMENT</p>
+          <img class="mb35" src="src/img/soc_media_items.svg" alt="">
+        </div>
+        <div>
+          <img class="mt32" src="src/img/afroza.svg" alt="">
+          <h3>Afroza Mou</h3>
+          <p>Head of marketing</p>
+          <img class="mb35" src="src/img/soc_media_items.svg" alt="">
+        </div>
+      </div>
+    </section>
 
-        <section class="newspaper">
-         <div>
-          <span>
-            <h1>Subscribe to get the Latest News</h1>
+    <section class="newspaper">
+      <div>
+        <span>
+          <h1>Subscribe to get the Latest News</h1>
           <p>We recommended you to subscribe to our newspaper,drop your email below to get daily update about us</p>
         </span>
         <input type="email" placeholder="Enter your email addres">
-         </div>
-      </section>
+        <button>Subscribe</button>
+      </div>
+    </section>
   </main>
   <footer>
+    <div class="footer_container">
+      <div class="footer_top">
+        <div>
+          <ul>
+            <li><img src="./src/img/Logo.png" alt="logo"></li>
+            <li><img src="./src/img/Location.svg" alt=""><a href="#">Dhaka, Bangladesh</a></li>
+            <li><img src="./src/img/Calling.png" alt=""><a href="#">0943833399</a></li>
+            <li><img src="./src/img/Message.png" alt=""><a href="#">support@zone.com</a></li>
+            <li><img class="mt16" src="./src/img/sosmed.svg" alt=""></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Order Management</a></li>
+            <li><a href="#"> Social Assistant</a></li>
+            <li><a href="#"> Crypto Platform</a></li>
+            <li><a href="#"> Analyzer of the News</a></li>
+          </ul>
 
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">Company </a></li>
+            <li><a href="#">About Us </a></li>
+            <li><a href="#">News </a></li>
+            <li><a href="#"> Our trusted partner</a></li>
+            <li><a href="#">New users FAQ </a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">Supports </a></li>
+            <li><a href="#">Help center </a></li>
+            <li><a href="#">Feedback </a></li>
+            <li><a href="#"> Contact us </a></li>
+            <li><a href="#"> Terms conditins</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">Resources </a></li>
+            <li><a href="#"> Download app </a></li>
+            <li><a href="#">Blog </a></li>
+            <li><a href="#"> What is new</a></li>
+            <li><a href="#"> Sitemap </a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer_bottom">
+        <p>© 2021 Zone. - All rights reserved.</p>
+        <div>
+          <a href="#">Privacy</a>
+          <a href="#">Security</a>
+          <a href="#">Terms</a>
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
+
 </html>
